theLanguageEmporium/force-app/main/default/objects/Candidate__c/fields/Answer_1__c.field-meta.xml
<CustomField>
    <fullName>Answer_1__c</fullName>
    <description>Answer to candidate additional question #1</description>
    <label>Answer 1</label>
    <type>TextArea</type>
</CustomField>