theLanguageEmporium/force-app/main/default/objects/Candidate__c/fields/Answer_2__c.field-meta.xml
<CustomField>
    <fullName>Answer_2__c</fullName>
    <description>Answer to candidate additional question #2</description>
    <label>Answer 2</label>
    <type>TextArea</type>
</CustomField>