theLanguageEmporium/force-app/main/default/objects/Candidate__c/fields/Answer_3__c.field-meta.xml
<CustomField>
    <fullName>Answer_3__c</fullName>
    <description>Answer to candidate additional question #3</description>
    <label>Answer 3</label>
    <type>TextArea</type>
</CustomField>