theLanguageEmporium/force-app/main/default/objects/Candidate__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>The candidate&apos;s city of residence</description>
    <label>City</label>
    <length>45</length>
    <type>Text</type>
</CustomField>